--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Rubik", sans-serif;
 }
 
 body {
@@ -11,7 +12,6 @@ body {
   flex-wrap: wrap;
   height: 200vh;
   width: 100%;
-  max-width: 1920px;
   margin: 0 auto;
 }
 
@@ -21,7 +21,7 @@ header {
   justify-content: space-between;
   width: 100%;
   height: 100px;
-  border: 1px solid black;
+  padding: 0 20px;
 }
 
 #logo {
@@ -32,7 +32,19 @@ header {
 }
 
 #navigation {
-  background: inherit;
+  /* background: inherit; */
+}
+
+#navigation button {
+  margin: 0 8px;
+  padding: 4px 0;
+  border: none;
+  background: none;
+  font-size: 1.1rem;
+}
+
+#navigation button:hover {
+  border-bottom: 1px solid black;
 }
 
 #about-section {
@@ -49,6 +61,7 @@ header {
 #about-one {
   justify-content: right;
   height: calc(100vh - 100px);
+  background-color: #faf0e6;
 }
 
 #about-two {
@@ -59,6 +72,7 @@ header {
 #about-three {
   justify-content: right;
   height: 100vh;
+  background-color: #faf0e6;
 }
 
 .about-image {
@@ -71,6 +85,14 @@ header {
   object-fit: contain;
 }
 
+.about button {
+  background: none;
+  margin-top: 8px;
+  padding: 4px;
+  border: 1px solid black;
+  font-size: 1.1rem;
+}
+
 #products {
   display: flex;
   justify-content: center;
@@ -81,7 +103,17 @@ header {
 }
 
 .product {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   width: 25%;
+}
+
+.product > * {
+  width: 100%;
+  text-align: center;
+  margin-top: 8px;
 }
 
 .product-img {
