--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
+  scroll-behavior: smooth;
+  text-decoration: none;
+  background: inherit;
+  border: none;
+  color: black;
 }
 
 body {
@@ -31,20 +36,19 @@ header {
   height: 100%;
 }
 
-#navigation {
-  /* background: inherit; */
-}
-
 #navigation button {
   margin: 0 8px;
   padding: 4px 0;
-  border: none;
-  background: none;
   font-size: 1.1rem;
+  cursor: pointer;
 }
 
 #navigation button:hover {
   border-bottom: 1px solid black;
+}
+
+#navigation button a {
+  color: black;
 }
 
 #about-section {
@@ -77,7 +81,7 @@ header {
 
 .about-image {
   width: 40%;
-  padding: 20px;
+  margin: 20px;
 }
 
 .about-image img {
@@ -86,11 +90,15 @@ header {
 }
 
 .about button {
-  background: none;
+  width: 80px;
   margin-top: 8px;
-  padding: 4px;
-  border: 1px solid black;
+  padding: 8px;
   font-size: 1.1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.about button:hover {
+  background-color: #b2c248;
 }
 
 #products {
@@ -117,5 +125,24 @@ header {
 }
 
 .product-img {
-  width: 300px;
+  width: 250px;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+}
+
+.product-price {
+  padding: 8px;
+  border: none;
+  background: transparent;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.product-price:hover span {
+  display: none;
+  transition: 5s;
+}
+
+.product-price:hover:before {
+  content: "+ Add to Cart";
+  border-bottom: 1px solid black;
 }
